tests/semantic/invalid/incompatible_backend.short
model bad_engine {
  format engine;
  path "models/bad.engine";
  task "image_classification";
  precision int8;
  input_shape "1,3,224,224";
  output_shape "1,1000";
  backend_preference onnxruntime_cpu, fallback;
  compact true;
  quality_guardrail accuracy >= 90;
};
tensor image float "1,3,224,224";
infer bad_engine(image) -> result;
